// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`t-on can bind event handler 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](e), ctx];
    return b1;
  }
}"
`;

exports[`t-on can bind handlers with arguments 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const arg1 = [5];
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](...arg1, e), ctx];
    return b1;
  }
}"
`;

exports[`t-on can bind handlers with empty  object 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const arg1 = [{}];
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['doSomething'](...arg1, e), ctx];
    return b1;
  }
}"
`;

exports[`t-on can bind handlers with empty object (with non empty inner string) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const arg1 = [{}];
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['doSomething'](...arg1, e), ctx];
    return b1;
  }
}"
`;

exports[`t-on can bind handlers with empty object (with non empty inner string) 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<ul><owl-anchor/></ul>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  class Block2 extends BNode {
    static el = elem(\`<li><a>link</a></li>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el.firstChild, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const [v1, k1, l1] = getValues(['someval']);
    const b2 = b1.children[0] = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`action\`] = v1[i1];
      ctx[\`action_first\`] = i1 === 0;
      ctx[\`action_last\`] = i1 === v1.length - 1;
      ctx[\`action_index\`] = i1;
      ctx[\`action_value\`] = k1[i1];
      let key1 = ctx['action_index'];
      const b3 = b2.children[i1] = new Block2();
      const arg2 = [ctx['action']];
      b3.handlers[0] = [\`click\`, (e) => owner(ctx)['activate'](...arg2, e), ctx];
      b2.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-on can bind handlers with object arguments 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const arg1 = [{val:5}];
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](...arg1, e), ctx];
    return b1;
  }
}"
`;

exports[`t-on can bind two event handlers 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(2);
    build() {
      const el1 = this.el;
      this.setupHandler(el1, 0);
      this.setupHandler(el1, 1);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['handleClick'](e), ctx];
    b1.handlers[1] = [\`dblclick\`, (e) => owner(ctx)['handleDblClick'](e), ctx];
    return b1;
  }
}"
`;

exports[`t-on handler is bound to proper owner 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](e), ctx];
    return b1;
  }
}"
`;

exports[`t-on handler is bound to proper owner, part 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const [v1, k1, l1] = getValues([1]);
    const b1 = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`value\`] = v1[i1];
      ctx[\`value_first\`] = i1 === 0;
      ctx[\`value_last\`] = i1 === v1.length - 1;
      ctx[\`value_index\`] = i1;
      ctx[\`value_value\`] = k1[i1];
      let key1 = i1;
      key1 = ctx['value'];
      const b2 = b1.children[i1] = new Block1();
      b2.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](e), ctx];
      b1.keys[i1] = key1;
    }
    return b1;
  }
}"
`;

exports[`t-on handler is bound to proper owner, part 3 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](e), ctx];
    return b1;
  }
}"
`;

exports[`t-on handler is bound to proper owner, part 3 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  return (ctx, refs = {}) => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = call(\`sub\`, ctx, refs);
    b1.refs = refs;
    return b1;
  }
}"
`;

exports[`t-on handler is bound to proper owner, part 4 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['add'](e), ctx];
    return b1;
  }
}"
`;

exports[`t-on handler is bound to proper owner, part 4 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  return (ctx, refs = {}) => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const [v1, k1, l1] = getValues([1]);
    const b1 = new BCollection(l1);
    ctx = Object.create(ctx);
    for (let i1 = 0; i1 < l1; i1++) {
      ctx[\`value\`] = v1[i1];
      ctx[\`value_first\`] = i1 === 0;
      ctx[\`value_last\`] = i1 === v1.length - 1;
      ctx[\`value_index\`] = i1;
      ctx[\`value_value\`] = k1[i1];
      let key1 = ctx['value'];
      b1.children[i1] = call(\`sub\`, ctx, refs);
      b1.keys[i1] = key1;
    }
    b1.refs = refs;
    return b1;
  }
}"
`;

exports[`t-on t-on with inline statement (function call) 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const v1 = ctx['state'];
    b1.handlers[0] = [\`click\`, (e) => v1.incrementCounter(2), ctx];
    return b1;
  }
}"
`;

exports[`t-on t-on with inline statement 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Click</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const v1 = ctx['state'];
    b1.handlers[0] = [\`click\`, (e) => v1.counter++, ctx];
    return b1;
  }
}"
`;

exports[`t-on t-on with inline statement, part 2 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Toggle</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const v1 = ctx['state'];
    b1.handlers[0] = [\`click\`, (e) => v1.flag=!v1.flag, ctx];
    return b1;
  }
}"
`;

exports[`t-on t-on with inline statement, part 3 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<button>Toggle</button>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const v1 = ctx['state'];
    const v2 = ctx['someFunction'];
    b1.handlers[0] = [\`click\`, (e) => v1.n=v2(3), ctx];
    return b1;
  }
}"
`;

exports[`t-on t-on with t-call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<p>lucas</p>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['update'](e), ctx];
    return b1;
  }
}"
`;

exports[`t-on t-on with t-call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return (ctx, refs = {}) => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.children[0] = call(\`sub\`, ctx, refs);
    b1.refs = refs;
    return b1;
  }
}"
`;

exports[`t-on t-on, with arguments and t-call 1`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<p>lucas</p>\`);
    handlers = new Array(1);
    build() {
      this.setupHandler(this.el, 0);
    }
  }
  
  return ctx => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    const arg1 = [ctx['value']];
    b1.handlers[0] = [\`click\`, (e) => owner(ctx)['update'](...arg1, e), ctx];
    return b1;
  }
}"
`;

exports[`t-on t-on, with arguments and t-call 2`] = `
"function anonymous(Blocks, utils
) {
  let {BCollection, BComponent, BComponentH, BHtml, BMulti, BNode, BText} = Blocks;
  let {elem, toString, withDefault, call, zero, scope, getValues, owner, callSlot} = utils;
  
  class Block1 extends BNode {
    static el = elem(\`<div><owl-anchor/></div>\`);
    children = new Array(1);
    anchors = new Array(1);
    build() {
      this.anchors[0] = this.el.firstChild;
    }
  }
  
  return (ctx, refs = {}) => {
    ctx = Object.create(ctx);
    ctx[scope] = 1;
    const b1 = new Block1();
    b1.children[0] = call(\`sub\`, ctx, refs);
    b1.refs = refs;
    return b1;
  }
}"
`;
